Fix mobile menu scrolling/truncating issue.

--- a/css/theme.css
+++ b/css/theme.css
@@ -239,7 +239,7 @@ body {background: url(../img/bg-hdr-sm.png) center top no-repeat #fff;}
 #mb-pnl nav a.wb-navcurr, #mb-pnl nav summary.wb-navcurr {outline: none; color: #00abf0;}
 
 #mb-pnl details ul {}
-#mb-pnl {background: #fff url(../img/bg-mb-pnl.svg) left top no-repeat; height: auto;}
+#mb-pnl {background: #fff url(../img/bg-mb-pnl.svg) left top no-repeat;}
 #mb-pnl header {background: transparent; color: #2750a0; border: none;}
 #mb-pnl header .modal-title {display: none;}
 #sm-pnl {background-color: #fff; color: #2750a0;}
